--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ChatAndVoipApp</groupId>
-  <artifactId>ChatAndVoipApp</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+<modelVersion>4.0.0</modelVersion>
+<groupId>CN2_AUTH_ChatAndVoIP_Group_AD</groupId>
+<artifactId>CN2_AUTH_ChatAndVoIP_Group_AD</artifactId>
+<version>0.0.1-SNAPSHOT</version>
 </project>
